# embrace-ambiguity

./: .travis.yml  LICENSE  README.md
defer-type-errors/: DeferTypeErrors.hs  TypedHoles.hs  defer-type-errors.cabal
partial-type-signature/: PartialTypeSignature.hs  partial-type-signature.cabal
typed-holes/: typed-holes.cabal
