name:                partial-type-signature
version:             0.0.0.1
synopsis:            Compiles a program with incomplete signatures
description:
        You can compile a Haskell program with incomplete type signatures
        under GHC 7.10 by passing -XPartialTypeSignatures to GHC.

license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb
homepage:            https://github.com/stackbuilders/accept-inconsistency
maintainer:          justin@stackbuilders.com
copyright:           2015 Justin Leitgeb
category:            Text
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:            git
  location:        https://github.com/stackbuilders/accept-inconsistency.git

library
  exposed-modules:     PartialTypeSignature

  ghc-options:         -Wall -XPartialTypeSignatures
  build-depends:       base >=4.2 && <4.9
  default-language:    Haskell2010