name:                typed-holes
version:             0.0.0.1
synopsis:            Compiles a program with type holes
description:
        You can successfully compile a Haskell program with type holes
        by specifying -fdefer-type-errors. Then the hole works as
        'undefined'.

license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb
homepage:            https://github.com/stackbuilders/embrace-ambiguity
maintainer:          justin@stackbuilders.com
copyright:           2015 Justin Leitgeb
category:            Text
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:            git
  location:        https://github.com/stackbuilders/embrace-ambiguity.git

library
  exposed-modules:     TypedHoles

  ghc-options:         -Wall -fdefer-type-errors
  build-depends:       base >=4.2 && <4.9
  default-language:    Haskell2010